# le_classmate_ros

./: CMakeLists.txt  README.md  dxf_trajectory_tutorial.md  layered_test_tutorial.md  package.xml  setup.py
data/: MFI.dxf  MFI2.dxf  MFI3.dxf  MFI4.dxf  MFI5.dxf  MFI6.dxf  MFI7.dxf  MFI8.dxf  poses.txt  rect2.dxf
launch/: welder.launch
ls/: ros_movesm.ls
scripts/: Welding.py  dxf_script.py  io_test.py  laser_run.py  layered_test.py  test_script.py  welder_class_example.py
src/le_classmate_ros/: Welder.py  Welder_Node.py  Welding.py
srv/: LaserArm.srv  LaserEmit.srv  Weld.srv
