<?xml version="1.0"?>
<package format="2">
  <name>le_classmate_ros</name>
  <version>1.0.0</version>
  <description>ROS/RPC interface for LE Classmate</description>

  <author email="ankitagg@andrew.cmu.edu">Ankit Aggarwal</author>
  <maintainer email="ankitagg@andrew.cmu.edu">Ankit Aggarwal</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  

  <depend>geometry_msgs</depend>
  <depend>fc_msgs</depend>
  <depend>fc_tasks</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>



  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
